# Renfepy

./: .gitignore  Changelog.md  LICENSE.txt  README.md  data.yaml  install_local.sh  main.py  pyproject.toml  renfe.py  renfe_search.py  requirements.txt  setup.py  test.py
.github/workflows/: codeql-analysis.yml
renfepy/: __init__.py  __main__.py  logger.py  renfe.py
renfepy/models/: traintable.py
src/renfepy/: __init__.py  models.py  renfe.py
src/renfepy/models/: train.py  traintable.py
