# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renfepy"
version = "2.0.0"
description = "Python library for crawl trains from renfe"
readme = "README.md"
authors = [{ name = "tekofx", email = "tekofxx@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["trains", "crawl", "selenium"]
dependencies = [
    "selenium",
    "rich",
    "python-dateutil",
    "prettytable",
]
requires-python = ">=3.9"


[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/tekofx/renfepy"

[project.scripts]
realpython = "renfepy.__main__:main"